[misc] Discontinue support for Java 8